--- a/billing/payment/index.html
+++ b/billing/payment/index.html
@@ -95,10 +95,7 @@
 
 <p>All your billing data is handled and stored safely by <a href="https://stripe.com/">Stripe</a> payment provider. No billing data is stored with PingPong.</p>
 
-<p>Premium can be paid by invoice on an annual plan. <a href="https://www.pingpong.watch/contact/?subject=Setup%20yearly%20invoice">Contact us</a> to set this up for your account.</p>
-
-<p>Pro plan is offered to open-source projects, nonprofits and schools/universities free of charge. Create a Pro account and <a href="https://www.pingpong.watch/contact/?subject=Open-source%20setup">contact us</a> to set this up.</p>
-
+<p>Business can be paid by invoice on an annual plan. <a href="https://www.pingpong.one/contact/?subject=Setup%20yearly%20invoice">Contact us</a> to set this up for your account.</p>
 		</div>
 		<div class="tutorial-share">
 			<a class="modalOpen no-smooth" href="#share">
@@ -245,7 +242,7 @@
 
 		<footer>
 	<div class="wrapper">
-		<p class="copyright">&copy;2021 PingPong. All Rights Reserved.</p>
+		<p class="copyright">&copy;2023 PingPong. All Rights Reserved.</p>
 	</div>
 </footer>
 
