--- a/search/index.html
+++ b/search/index.html
@@ -76,7 +76,7 @@
 			<div class="wrapper">
 				<p><span id="search-process">Loading</span> results <span id="search-query-container" style="display: none;">for "<strong id="search-query"></strong>"</span></p>
 <ul id="search-results"></ul>
-<br><br><p>Can't find what you are looking for? <a href="https://pingpong.watch/contact/">Contact us</a></p>
+<br><br><p>Can't find what you are looking for? <a href="https://pingpong.one/contact/">Contact us</a></p>
 
 <script>
 	window.data = {
@@ -151,7 +151,7 @@
 
 		<footer>
 	<div class="wrapper">
-		<p class="copyright">&copy;2021 PingPong. All Rights Reserved.</p>
+		<p class="copyright">&copy;2023 PingPong. All Rights Reserved.</p>
 	</div>
 </footer>
 
